--- a/css/about.css
+++ b/css/about.css
@@ -10,6 +10,8 @@ body{
   padding: 0;
   font-family: 'Noto Sans TC', sans-serif;
   letter-spacing: 0.04em;
+  overflow: hidden;
+  overflow-y: scroll;
 }
  
 img, embed{
