--- a/css/header.css
+++ b/css/header.css
@@ -94,6 +94,7 @@ a.logo_top{
 nav.nav{
   width: 50%;
   height: 60px;
+  z-index: 2;
 }
 
 nav.nav ul.nav_list{
@@ -180,6 +181,7 @@ div.login_signup_block{
   justify-content: space-around;
   align-items: center;
   padding: 0;
+  z-index: 2;
 }
 
 div.container{
