--- a/css/index.css
+++ b/css/index.css
@@ -9,6 +9,8 @@ body{
   margin: 0;
   padding: 0;
   font-family: 'Noto Sans TC', sans-serif;
+  overflow: hidden;
+  overflow-y: scroll;
 } 
 
 img, embed{
@@ -119,7 +121,7 @@ img.scroll_down{
     display: none;
   }
 
-}
+} 
 
 /*====== 行動版 RWD | 768px ~ 1200px ======*/
 @media screen and (min-width: 768px) and (max-width: 1199.98px){
