--- a/css/personal.css
+++ b/css/personal.css
@@ -9,11 +9,18 @@ body{
   margin: 0;
   padding: 0;
   font-family: 'Noto Sans TC', sans-serif;
+  overflow-y: scroll;
+  overflow-x: auto;
 }
 
+img, embed{
+  max-width: 100%;
+}
 
+/*====== 方案展示 banner ======*/
 
 div.personal_intro_block{
+  width: 100%;
   text-align: center;
   margin-top: 100px;
   letter-spacing: 0.05em;
@@ -44,14 +51,18 @@ div.personal_interface_block{
   margin: 20px auto;
   width: 1080px;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 div.shift_btn{
   /* border: 1px solid black; */
   text-align: left;
-  width: 920px;
-  margin: 0 auto;
-  padding-left: 30px;
+  width: 70%;
+  /* margin: 0 auto; */
+  display: flex;
+  justify-content: flex-start;
   z-index: 0;
   position: relative;
 }
@@ -116,8 +127,54 @@ div.content1.-on, div.content2.-on, div.content3.-on{
 }
 
 embed.personal_slide{
-  width: 920px;
+  width: 90%;
+  max-width: 920px;
 }
+
+
+/*====== 行動版 RWD | 320px ~ 768px ======*/
+@media screen and (min-width: 320px) and (max-width: 767.98px){
+
+  div.personal_intro_eng, div.personal_intro_zh{
+    font-size: 24px;
+  }
+
+  div.personal_interface_block{
+    width: 100%;
+  }
+
+  div.shift_btn{
+    width: 80%;
+  }
+
+  button.btn1, button.btn2, button.btn3{
+    font-size: 14px;
+    /* width: 28%; */
+  }
+
+}
+
+
+
+/*====== 行動版 RWD | 768px ~ 1200px ======*/
+@media screen and (min-width: 768px) and (max-width: 1199.98px){
+  
+  div.personal_interface_block{
+    width: 100%;
+  }
+
+  div.shift_btn{
+    width: 80%;
+    max-width: 996px;
+    position: relative;
+    transform: translateX(40px);
+  }
+
+}
+
+
+
+/*====== 特點介紹 banner ======*/
 
 div.personal_feature_block{
   margin: 0 auto 100px;
@@ -197,6 +254,22 @@ button.feature_btn1:focus, button.feature_btn2:focus, button.feature_btn3:focus{
   outline: none;
 }
 
+
+/*====== 行動版 RWD | 320px ~ 768px ======*/
+@media screen and (min-width: 320px) and (max-width: 767.98px){
+
+}
+
+
+
+/*====== 行動版 RWD | 768px ~ 1200px ======*/
+@media screen and (min-width: 768px) and (max-width: 1199.98px){
+
+
+}
+
+
+/*====== 單項特點介紹 banner ======*/
 
 div.feature_banner_container{
   margin: 0px auto;
@@ -287,26 +360,22 @@ button.btn_left.-on, button.btn_right.-on{
   outline: none;
 }
 
-button.back_to_feature{
-  cursor: pointer;
-  margin: 25px 0 0 10px;
-  background-color: #eeeeee;
-  border: none;
-  padding: 8px;
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-  box-shadow: 1px 2px 2px 0px #00000040;
+
+/*====== 行動版 RWD | 320px ~ 768px ======*/
+@media screen and (min-width: 320px) and (max-width: 767.98px){
+
 }
 
-img.angle_up{
-  width: 16px;
-  padding-bottom: 5px;
-  /* border: 1px solid red; */
-  margin-bottom: 8px;
-  padding-right: 1px;
+
+
+/*====== 行動版 RWD | 768px ~ 1200px ======*/
+@media screen and (min-width: 768px) and (max-width: 1199.98px){
+
+
 }
 
+
+/*====== 展開計畫 ======*/
 
 div.bottom_banner{
   width: 1080px;
@@ -321,8 +390,28 @@ div.bottom_banner_container{
   letter-spacing: 0.04em;
   margin: 0 auto;
   display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
+div.left_container{
+  width: 20%;
+  /* border: 1px solid red; */
+}
+
+div.middle_container{
+  width: 60%;
+  /* border: 1px solid red; */
+  display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+div.right_container{
+  width: 20%;
+  /* border: 1px solid red; */
+
 }
 
 div.bottom_title{
@@ -340,16 +429,21 @@ div.bottom_content{
 img.bird_flying{
   width: 128px;
   position: relative;
-  transform: translate(-450%, -150%);
+  transform: translate(120px, -40px);
 }
 
 img.line{
-  width: 500px;
-  position: relative;
-  transform: translate(-115%, -700%);
+  width: 40%;
+  position: absolute;
+  transform: translate(-300px, 15px);
 }
 
-button.btn_act{
+div.getready{
+  width: 100%;
+  margin: 10px auto 40px;
+}
+
+button.ready{
   background-color: #2869D1;
   padding: 6px 18px 8px;
   border-radius: 8px;
@@ -361,6 +455,6 @@ button.btn_act{
   width: 115px;
 } 
 
-button.btn_act:hover{
+button.ready:hover{
   box-shadow: 1px 2px 2px 0px #00000040;
 }
